# rust-microservices-book

./: .gitignore  README.md
chat/: Cargo.toml
chat/migrations/2020-05-07-232136_create_messages/: up.sql
chat/src/: lib.rs  models.rs
diesel/: Cargo.toml
diesel/src/: main.rs
hyper-microservice/: Cargo.toml  test.sh
hyper-microservice/src/: main.rs
postres/: Cargo.toml
rand_value_server/: Cargo.toml
rand_value_server/src/: main.rs
redis/: Cargo.toml
users/: Cargo.toml
users-nosql/src/: main.rs
users/src/: main.rs
using_serde/: Cargo.toml
using_serde/src/: color.rs  main.rs
