[package]
name = "chat"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
failure = "0.1.8"
r2d2 = "0.8.8"
serde = "1.0.106"
serde_derive = "1.0.106"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
