[package]
name = "users"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
failure = "0.1.8"
postgres = "0.17.2"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
rayon = "1.3.0"
serde = "1.0.106"
serde_derive = "1.0.106"
