[package]
name = "rand_value_server"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"
description = "An example server to demonstrate logging and using configurations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.13"
hyper = "0.12"
log = "0.4"
pretty_env_logger = "0.2"
rand = "0.5"
