[package]
name = "users-nosql"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.8"
r2d2 = "0.8.8"
r2d2_redis = "0.13.0"
redis = "0.15.1"
